[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit-serverless"
description = "An open-source SDK for resource management in quantum computing workflows."
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
authors = [
    { name = "Qiskit Serverless Team", email = "qiskit@us.ibm.com" },
]
keywords = [
    "qiskit",
    "serverless",
    "quantum computing",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

# These are configured in the `tool.setuptools.dynamic` table.
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.package-data]
qiskit_serverless = ["VERSION.txt"]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "qiskit_serverless.version.__version__"}
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = {file = "requirements.txt" }