[metadata]
name = quantum_serverless
version = 0.0.0
description = Quantum serverless.

[options]
packages = find:
install_requires=
    ray~=2.0.0
    requests~=2.28.0
    importlib-metadata>=4.12.0
    qiskit-terra>=0.21.0
    qiskit-nature~=0.4.4
    qiskit-ibmq-provider~=0.19.2
    qiskit-aer~=0.11.0
    qiskit-ibm-runtime==0.7.0rc1

[options.extras_require]
dev =
    build
    pytest
    treon
    tox
    black==22.3.0
test =
    treon
    black==22.3.0
    pytest
