[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum_serverless_tools"
version = "0.0.0"
description = "A package for automatically selecting qubits."
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23.0",
    "qiskit>=0.43.0",
    "qiskit-ibm-runtime>=0.9.2",
]

[project.optional-dependencies]
dev = [
    "circuit-knitting-toolbox[test,nbtest,lint]",
]
basetest = [
    "pytest>=6.2.5",
    "pytest-randomly>=1.2.0",
    "mapomatic"
]
test = [
    "quantum_serverless_tools[basetest]",
]
nbtest = [
    "quantum_serverless_tools[basetest]",
    "nbmake>=1.3.4"
]
style = [
    "autoflake==2.2.1",
    "black[jupyter]~=23.1",
    "ruff>=0.0.246",
    "nbqa>=1.6.0",
]
lint = [
    "quantum_serverless_tools[style]",
    "pydocstyle==6.3.0",
    "mypy==1.5.1",
    # pydocstyle prefers to parse our pyproject.toml, hence the following line
    "toml",
]
notebook-dependencies = [
    "quantum_serverless_tools",
    "quantum-serverless",
    "matplotlib",
    "ipywidgets",
    "pylatexenc",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "quantum_serverless_tools",
]

[tool.autoflake]
remove-unused-variables = true
remove-all-unused-imports = true

[tool.pytest.ini_options]
testpaths = ["./quantum_serverless_tools/", "./test/"]
addopts = "--doctest-modules -rs --durations=10"

[tool.ruff]
extend-include = ["*.ipynb"]
